{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 151,
  "lineage": "52f690ee-e10d-1efb-1b6e-fde5612c2021",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ikenna",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:920375856513:instance/i-0beef5acd9c5684e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beef5acd9c5684e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ikenna",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-012322e8221ac53bb"
              }
            ],
            "primary_network_interface_id": "eni-012322e8221ac53bb",
            "private_dns": "ip-172-31-10-83.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.83",
            "public_dns": "ec2-3-145-43-175.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.43.175",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02cf0d7ef38c36816",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "secgroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccd1410ccb46411c",
            "tags": {
              "Name": "IAC_Instance",
              "Project": "IAC"
            },
            "tags_all": {
              "Name": "IAC_Instance",
              "Project": "IAC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000f94beb2aff469b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "i-0beef5acd9c5684e3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group/sg-000f94beb2aff469b",
            "description": "Security_Group",
            "egress": [],
            "id": "sg-000f94beb2aff469b",
            "ingress": [],
            "name": "secgroup",
            "name_prefix": "",
            "owner_id": "920375856513",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "firewall"
            },
            "tags_all": {
              "Name": "firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-00210d4a504a8a5d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sg-000f94beb2aff469b",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_outbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-05fd1f881e6c80d75",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05fd1f881e6c80d75",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-000f94beb2aff469b",
            "security_group_rule_id": "sgr-05fd1f881e6c80d75",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-05fd1f881e6c80d75",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-0a1293478d54b8531",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0a1293478d54b8531",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-000f94beb2aff469b",
            "security_group_rule_id": "sgr-0a1293478d54b8531",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-0a1293478d54b8531",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "net_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-0c548eb994beeee00",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c548eb994beeee00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-000f94beb2aff469b",
            "security_group_rule_id": "sgr-0c548eb994beeee00",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-0c548eb994beeee00",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920375856513:security-group-rule/sgr-04444a17a2ae97921",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04444a17a2ae97921",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-000f94beb2aff469b",
            "security_group_rule_id": "sgr-04444a17a2ae97921",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "920375856513",
            "id": "sgr-04444a17a2ae97921",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.secgroup"
          ]
        }
      ]
    }
  ]
}